Front-end cloning

--- a/find.html
+++ b/find.html
@@ -10,6 +10,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Find | Kakao Clone</title>
   </head>
   <body>
@@ -82,7 +83,7 @@
           </h5>
           <li class="find__friend friend">
                 <div class="friend__column">
-                  <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+                  <img src="images/avatar.jpg" class="friend__avatar" />
                   <div class="friend__content">
                     <span class="friend__name">Seongjin Kang</span>
                   </div>
@@ -104,6 +105,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+              <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
