--- a/friends.html
+++ b/friends.html
@@ -10,6 +10,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Friends | Kakao Clone</title>
   </head>
   <body>
@@ -40,8 +41,8 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friend__column">
-          <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend friend--lg">
+          <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">Seongjin Kang</span>
@@ -54,18 +55,18 @@
         <h5 class="friends__plus-title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
-              <span class="friend__name">Plus friend</span>
+              <span class="friend__name">Seongjin Kang</span>
             </div>
           </div>
         </div>
       </div>
       <h5 class="friends_title">Friends 14</h5>
       <ul class="friends__list">
-        <li class="friends__friend friend">
+        <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">Seongjin Kang</span>
               <span class="friend__status">Growing up</span>
@@ -89,6 +90,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
