--- a/find.html
+++ b/find.html
@@ -73,27 +73,26 @@
             <span class="header-btn__title">
               Invite
             </span>
-        </li>
-        
+          </li>
         </ul>
       </header>
       <ul class="find__recommended">
-          <h5 class="find__title">
-              Recommended Friends
-          </h5>
-          <li class="find__friend friend">
-                <div class="friend__column">
-                  <img src="images/avatar.jpg" class="friend__avatar" />
-                  <div class="friend__content">
-                    <span class="friend__name">Seongjin Kang</span>
-                  </div>
-                </div>
-                <div class="friend_column">
-                  <div class="friend__add-btn"></div>
-                    <i class="fas fa-user-plus"></i>
-                  </div>
-                </div>
-              </li>
+        <h5 class="find__title">
+          Recommended Friends
+        </h5>
+        <li class="find__friend friend">
+          <div class="friend__column">
+            <img src="images/avatar.jpg" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">Seongjin Kang</span>
+            </div>
+          </div>
+          <div class="friend_column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
       </ul>
     </main>
     <nav class="nav">
@@ -105,7 +104,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
-              <div class="nav__badge">8</div>
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
