--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <h5 class="friends_title">Friends 14</h5>
+      <h5 class="friends__title">Friends 14</h5>
       <ul class="friends__list">
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
@@ -74,8 +74,10 @@
           </div>
           <div class="friend_column">
             <div class="friend__now-listening">
-              <span>FTISLAND</span>
-              <i class="fas fa-play"></i>
+              <span
+                >FTISLAND
+                <i class="fas fa-play"></i>
+              </span>
             </div>
           </div>
         </li>
