--- a/more.html
+++ b/more.html
@@ -84,19 +84,19 @@
         <h5 class="more__title">Suggestions</h5>
         <ul class="more__suggestions-list">
           <li class="more_suggestions suggestion">
-            <span class="suggesions__icon">
+            <span class="suggestions__icon">
               <i class="fas fa-quote-right fa-2x"></i>
             </span>
             <span class="suggestion__title">Kakao Story</span>
           </li>
           <li class="more_suggestions suggestion">
-            <span class="suggesions__icon">
+            <span class="suggestions__icon">
               <i class="fas fa-beer fa-2x"></i>
             </span>
             <span class="suggestion__title">Kakao friends</span>
           </li>
           <li class="more_suggestions suggestion">
-            <span class="suggesions__icon">
+            <span class="suggestions__icon">
               <i class="fas fa-gamepad fa-2x"></i>
             </span>
             <span class="suggestion__title">Friends Gem</span>
