--- a/settings.html
+++ b/settings.html
@@ -56,6 +56,22 @@
           </li>
         </ul>
       </section>
+      <section class="settings__sections">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon"> <i class="fas fa-lock"></i> </span
+            ><span class="settings_title">Privacy</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon"> <i class="far fa-bell"></i></span
+            ><span class="settings_title">Notifications</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon"> <i class="fas fa-user"></i></span
+            ><span class="settings_title">Friends</span>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
