--- a/chat.html
+++ b/chat.html
@@ -78,11 +78,16 @@
       </ul>
     </main>
     <div class="chat__write">
-      <input type="text" placeholder="Send message" class="chat__write-input" />
       <div class="chat__write-column">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__write-column"></div>
+      <div class="chat__write-column">
+        <input
+          type="text"
+          placeholder="Send message"
+          class="chat__write-input"
+        />
+      </div>
       <div class="chat__write-column">
         <span class="chat__write-icon">
           <i class="far fa-smile-wink"></i>
