--- a/more.html
+++ b/more.html
@@ -104,6 +104,7 @@
         </ul>
       </section>
     </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
@@ -129,5 +130,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller</span>
+    </div>
   </body>
 </html>
