--- a/settings.html
+++ b/settings.html
@@ -73,5 +73,8 @@
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen smaller</span>
+    </div>
   </body>
 </html>
