--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </ul>
     </nav>
     <div class="bigScreen">
-      <span class="bigScreen__text">Please make your screen smaller</span>
+      <span class="bigScreen__text">강나영 사랑해</span>
     </div>
   </body>
 </html>
