--- a/chat.html
+++ b/chat.html
@@ -96,8 +96,8 @@
         </span>
       </div>
     </div>
-    <!-- <div class="bigScreen">
+    <div class="bigScreen">
       <span class="bigScreen__text">Please make your screen smaller</span>
-    </div> -->
+    </div>
   </body>
 </html>
